--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>إلى أغلى إنسانة</title>
+    <title>To My Heart</title>
     <style>
         :root {
             --dark-bg: #0a0a0a;
